exports[`test component renders as before with top card 1`] = `
<Unknown>
  <div
    className="pile">
    <div>
      <img
        alt="undefined undefined"
        className="playing-card"
        src={undefined} />
    </div>
  </div>
</Unknown>
`;

exports[`test component renders as before without top card 1`] = `
<Unknown>
  <div
    className="pile">
    <div
      className="noCards" />
  </div>
</Unknown>
`;
